--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -40,4 +40,5 @@ pt-BR:
   kanban_text_assigned_to_me_color: "Atribuido para mim - <span>Cabeçalho Verde</span>"
   kanban_text_updated_issue: "Tarefa Atualizada"
   kanban_text_sync: "Sincronizar"
+  field_see_in_kanban: "Exibir no Kanban"
 
