Updating locales English and Brazilian Portuguese configuration color help labels

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -34,12 +34,19 @@ en:
   kanban_text_saved: Updated lists.
   field_state: "State"
   kanban_text_nothing: "(No issues)"
+
   kanban_text_color_help: "Color Help"
-  kanban_text_normal_color: "Normal - <span>Yellow</span>"
-  kanban_text_assigned_to_me_color: "Assigned to Me - <span>Green header</span>"
-  kanban_text_behind_schedule_color: "Behind schedule - <span>Orange header</span>"
-  kanban_text_overdue_color: "Overdue - <span>Red Header</span>"
-  kanban_text_over_wip_color: "Over Work in Progress Limit - <span>Pink header and details</span>"
+#  kanban_text_normal_color: "Normal - <span>Yellow</span>"
+#  kanban_text_assigned_to_me_color: "Assigned to Me - <span>Green header</span>"
+#  kanban_text_behind_schedule_color: "Behind schedule - <span>Orange header</span>"
+#  kanban_text_overdue_color: "Overdue - <span>Red Header</span>"
+#  kanban_text_over_wip_color: "Over Work in Progress Limit - <span>Pink header and details</span>"
+  kanban_text_orphan_color: "Orphan Task - <span>White</span>"
+  kanban_text_hitch_color: "Hitch Task - <span>Red Header</span>"
+  kanban_text_ancestor_color: "Ancestor Task - <span>Light Blue Header</span>"
+  kanban_text_descendant_color: "Descendant Task - <span>Dark Blue Header</span>"
+  kanban_text_overdue_color: "Overdue Task- <span>Red Header</span>"
+
   kanban_text_updated_issue: "Updated issue"
   kanban_text_sync: "Sync"
   kanban_button_add_task: "New Task"
