--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -32,12 +32,19 @@ pt-BR:
   kanban_text_saved: Listas atualizadas.
   field_state: "Estado"
   kanban_text_nothing: "(Sem tarefas)"
+
   kanban_text_color_help: "Ajuda com Cores"
-  kanban_text_behind_schedule_color: "Anteriormente Agendada - <span>Cabeçalho Laranja</span>"
-  kanban_text_overdue_color: "Vencida - <span>Cabeçalho Vermelho</span>"
-  kanban_text_over_wip_color: "Trabalho Em Progresso Acima do limite - <span>Cabeçalho Rosa Com Detalhes</span>"
-  kanban_text_normal_color: "Normal - <span>Amarelo</span>"
-  kanban_text_assigned_to_me_color: "Atribuido para mim - <span>Cabeçalho Verde</span>"
+  #kanban_text_behind_schedule_color: "Anteriormente Agendada - <span>Cabeçalho Laranja</span>"
+  #kanban_text_overdue_color: "Vencida - <span>Cabeçalho Vermelho</span>"
+  #kanban_text_over_wip_color: "Trabalho Em Progresso Acima do limite - <span>Cabeçalho Rosa Com Detalhes</span>"
+  #kanban_text_normal_color: "Normal - <span>Amarelo</span>"
+  #kanban_text_assigned_to_me_color: "Atribuido para mim - <span>Cabeçalho Verde</span>"
+  kanban_text_orphan_color: "Tarefa Orfã - <span>Branca</span>"
+  kanban_text_hitch_color: "Tarefa em Dificuldade - <span>Cabeçalho Vermelho</span>"
+  kanban_text_ascendant_color: "Tarefa Pai - <span>Cabeçalho Azul Claro</span>"
+  kanban_text_descendant_color: "Tarefa Filha - <span>Cabeçalho Azul Escuro</span>"
+  kanban_text_overdue_color: "Tarefa Vencida - <span>Corpo Vermelho</span>"
+
   kanban_text_updated_issue: "Tarefa Atualizada"
   kanban_text_sync: "Sincronizar"
   field_see_in_kanban: "Exibir no Kanban"
